force-app/main/default/objects/Loan_Application__c/Loan_Application__c.object-meta.xml
<CustomObject>
    <description>Central object that represents a customer's loan application request</description>
    <label>Loan Application</label>
    <nameField>
        <displayFormat>APP-{0000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>