force-app/main/default/objects/Loan_Application__c/fields/Applicant_Profile__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Applicant Profile who submitted this loan application</description>
    <inlineHelpText>Select the applicant profile for this loan application</inlineHelpText>
    <label>Applicant Profile</label>
    <referenceTo>Applicant_Profile__c</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>