force-app/main/default/objects/Loan_Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>The date when the loan application was submitted</description>
    <inlineHelpText>The date this loan application was submitted</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>