force-app/main/default/objects/Loan_Application__c/fields/Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback__c</fullName>
    <description>Customer feedback provided after accepting or declining the loan offer</description>
    <inlineHelpText>Feedback from the customer about their experience with the loan application process</inlineHelpText>
    <label>Customer Feedback</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>