force-app/main/default/objects/Loan_Application__c/fields/Customer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rating__c</fullName>
    <description>Customer satisfaction rating from 1 to 5 stars</description>
    <inlineHelpText>Customer satisfaction rating (1-5 stars)</inlineHelpText>
    <label>Customer Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>