force-app/main/default/objects/Loan_Application__c/fields/Days_In_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Current_Status__c</fullName>
    <description>Formula field that calculates how many days the application has been in its current status</description>
    <formula>TODAY() - 
IF(
  ISBLANK(LastModifiedDate),
  DATEVALUE(CreatedDate),
  DATEVALUE(LastModifiedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the application status was last changed</inlineHelpText>
    <label>Days in Current Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>