force-app/main/default/objects/Loan_Application__c/fields/Document_Count__c.field-meta.xml
<CustomField>
    <fullName>Document_Count__c</fullName>
    <description>Formula field that counts the number of documents attached to this loan application</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of documents attached to this loan application</inlineHelpText>
    <label>Document Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>