force-app/main/default/objects/Loan_Application__c/fields/Feedback_Date__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Date__c</fullName>
    <description>Date and time when customer feedback was submitted</description>
    <inlineHelpText>When the customer provided their feedback</inlineHelpText>
    <label>Feedback Date</label>
    <type>DateTime</type>
</CustomField>