force-app/main/default/objects/Loan_Application__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>The annual interest rate for the loan</description>
    <inlineHelpText>Enter the annual interest rate as a percentage (e.g., 5.5 for 5.5%)</inlineHelpText>
    <label>Interest Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>