force-app/main/default/objects/Loan_Application__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>The purpose of the loan</description>
    <inlineHelpText>Select the primary purpose for this loan</inlineHelpText>
    <label>Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>Debt Consolidation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>