force-app/main/default/objects/Loan_Application__c/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <description>The term of the loan in months</description>
    <inlineHelpText>Enter the loan term in months (e.g., 36 for 3 years)</inlineHelpText>
    <label>Term (Months)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>