force-app/main/default/objects/Loan_Application__c/validationRules/Future_Application_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Application_Date</fullName>
    <active>true</active>
    <description>Ensures application date cannot be in the future</description>
    <errorConditionFormula>Application_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Application_Date__c</errorDisplayField>
    <errorMessage>Application date cannot be in the future</errorMessage>
</ValidationRule>