force-app/main/default/objects/Loan_Application__c/validationRules/Valid_Loan_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Loan_Amount</fullName>
    <active>true</active>
    <description>Ensures loan amount is between $1,000 and $100,000</description>
    <errorConditionFormula>OR(
    Amount_Requested__c &lt; 1000,
    Amount_Requested__c &gt; 100000
)</errorConditionFormula>
    <errorDisplayField>Amount_Requested__c</errorDisplayField>
    <errorMessage>Loan amount must be between $1,000 and $100,000</errorMessage>
</ValidationRule>